--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "shopify:trigger": "node scripts/shopify/trigger.ts"
+    "shopify:trigger": "node scripts/shopify/trigger.ts",
+    "stripe:batch": "./scripts/stripe/batch.sh"
   },
   "dependencies": {
     "react": "^19.0.0",
