--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "shopify:trigger": "node scripts/shopify/trigger.ts",
-    "stripe:batch": "./scripts/stripe/batch.sh"
+    "stripe:batch": "./scripts/stripe/batch.sh",
+    "stripe:batch:invoice": "./scripts/stripe/batch.sh invoice",
+    "stripe:batch:subs": "./scripts/stripe/batch.sh subscription",
+    "deleteall": "npx tsx --env-file .env scripts/delete_all.ts"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "next": "15.2.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -22,7 +26,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.15.7"
   },
   "engines": {
     "node": ">=22.9.0"
