feat: add webhook verification and update environment variables in README

--- a/stripe-fetch-before-process/.env.example
+++ b/stripe-fetch-before-process/.env.example
@@ -1,6 +1,11 @@
+# This is used to authenticate requests to the Stripe API.
+STRIPE_API_KEY=
+
+# This is used to authenticate requests to the Hookdeck API.
+HOOKDECK_API_KEY=
+
+# This is used to authenticate webhooks from the Hookdeck Event Gateway.
+HOOKDECK_WEBHOOK_SECRET=
+
 # The port the server will listen on
 PORT=3000
-
-# This is used to authenticate requests to the Stripe API.
-STRIPE_API_KEY=# Your Stripe API key
-HOOKDECK_API_KEY=
