chore: update @types/node version and improve stripe-trigger script for better argument handling

--- a/stripe-fetch-before-process/tsconfig.json
+++ b/stripe-fetch-before-process/tsconfig.json
@@ -3,12 +3,11 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "scripts/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
