chore: update to fetch resource rather than event

--- a/stripe-fetch-before-process/.env.example
+++ b/stripe-fetch-before-process/.env.example
@@ -1,10 +1,13 @@
-# This is used to authenticate requests to the Stripe API.
+# Used to authenticate requests to the Stripe API.
 STRIPE_API_KEY=
 
-# This is used to authenticate requests to the Hookdeck API.
+# Used to verify webhooks from Stripe.
+STRIPE_WEBHOOK_SECRET=
+
+# Used to authenticate requests to the Hookdeck API.
 HOOKDECK_API_KEY=
 
-# This is used to authenticate webhooks from the Hookdeck Event Gateway.
+# Used to authenticate webhooks from the Hookdeck Event Gateway.
 HOOKDECK_WEBHOOK_SECRET=
 
 # The port the server will listen on
