feat: Add cli-overview demo and enhance tmux-presenter with terminal config and capture improvements
New Features:
- Created cli-overview demo showcasing Hookdeck CLI guest mode (no auth required)
- Added terminal spawn configuration options (fontSize, width, height, maximize)
- Implemented window maximize option for presentations (fills screen without full-screen mode)
- Enhanced capture action with window resize workaround for TUI applications
- Added default prompts for wait:true actions to improve presenter guidance
CLI-Overview Demo:
- 10-scene automated presentation demonstrating Hookdeck CLI guest mode
- Includes local server, webhook sending, TUI navigation, and session filters
- Uses keypress automation for interactive TUI demonstration
- Dynamic URL capture from Hookdeck CLI output with variable substitution

Tmux-Presenter Enhancements:
- Terminal config: fontSize, width, height, maximize (macOS Terminal.app)
- Maximize window fills available screen space (keeps menu bar/dock visible)
- Capture action window resize workaround for truncated TUI output
- Default prompts: '⏸️ Press ENTER to execute...' for better UX
- Comprehensive documentation updates for all new features

Files Added:
- cli-overview/: Complete demo project (presentation.yaml, server.ts, README.md)
- Updated session-filters/presentation.yaml with fontSize option

Technical Improvements:
- TmuxController: spawnTerminalWithTmux() now accepts size and maximize params
- CommandExecutor: Enhanced capture with temporary window expansion (5000px)
- PaneManager: Window resize and font size control via AppleScript
- TerminalConfig interface: Added fontSize and maximize options

--- a/session-filters/presentation.yaml
+++ b/session-filters/presentation.yaml
@@ -28,8 +28,8 @@ layout:
   terminal:
     spawn: true
     title: "Hookdeck Demo - Presentation View"
-    width: 1200
-    height: 600
+    maximize: true  # Maximize window (overrides width/height)
+    fontSize: 18  # Font size in points (macOS Terminal.app only)
   controller:
     title: "Hookdeck Demo - Presenter View"
   panes:
