--- a/ai/deepgram/.env.example
+++ b/ai/deepgram/.env.example
@@ -5,7 +5,14 @@ DEEPGRAM_API_KEY=your_deepgram_api_key_here
 # Server port (optional)
 PORT=4000
 
-# Hookdeck Callback URL (REQUIRED for TTS demo)
-# Run 'hookdeck listen 4000 --path /webhooks/deepgram' first
-# Then copy the Source URL from the output (format: https://hkdk.events/...)
-CALLBACK_URL=https://hkdk.events/your-source-id-here
+# Hookdeck Callback URLs (REQUIRED)
+# Set up Hookdeck connections using the commands in README.md
+# Then copy the Source URLs from Hookdeck dashboard (format: https://hkdk.events/...)
+
+# TTS callback URL (for Text-to-Speech demo)
+# Note: TTS demo is non-functional due to Hookdeck binary data limitation
+TTS_CALLBACK_URL=https://hkdk.events/your-tts-source-id-here
+
+# STT callback URL (for Speech-to-Text demo)
+# This one WORKS - STT returns JSON transcriptions
+STT_CALLBACK_URL=https://hkdk.events/your-stt-source-id-here
