--- a/ai/deepgram/package.json
+++ b/ai/deepgram/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "Hookdeck + Deepgram integration demos",
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "uuid": "^9.0.1"
