feat: add upsert script and enhance README for Hookdeck connections
- Introduced a TypeScript script to create or update both production and development Hookdeck connections, improving local debugging capabilities.
- Updated README to reflect changes in setup instructions, including new environment variable requirements and detailed connection setup steps.
- Enhanced demo objectives and checklists to clarify the use of production and development connections for comprehensive testing scenarios.

--- a/shopify-webhooks-at-scale/package.json
+++ b/shopify-webhooks-at-scale/package.json
@@ -4,6 +4,7 @@
   "description": "Demo harness for Shopify webhooks at scale demonstrations",
   "main": "index.js",
   "scripts": {
+    "upsert": "ts-node scripts/01-hookdeck-upsert.ts",
     "send:simulated": "ts-node scripts/02-send-simulated-webhooks.ts",
     "destination": "ts-node scripts/03-demo-destination.ts"
   },
