--- a/shopify-webhooks-at-scale/package.json
+++ b/shopify-webhooks-at-scale/package.json
@@ -18,7 +18,9 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@iarna/toml": "^2.2.5",
     "@types/express": "^4.17.21",
+    "@types/iarna__toml": "^2.0.4",
     "@types/node": "^20.11.0"
   }
 }
