--- a/shopify-webhooks-at-scale/package.json
+++ b/shopify-webhooks-at-scale/package.json
@@ -6,20 +6,19 @@
   "scripts": {
     "upsert": "ts-node scripts/01-hookdeck-upsert.ts",
     "send:simulated": "ts-node scripts/02-send-simulated-webhooks.ts",
-    "destination": "ts-node scripts/03-demo-destination.ts"
+    "send:shopify": "ts-node scripts/03-trigger-shopify-webhook.ts",
+    "dev:shopify": "shopify app dev --path ./shopify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
-    "@types/express": "^4.17.21",
     "@types/iarna__toml": "^2.0.4",
     "@types/node": "^20.11.0"
   }
