--- a/shopify-webhooks-at-scale/shopify/shopify.web.toml
+++ b/shopify-webhooks-at-scale/shopify/shopify.web.toml
@@ -1,6 +1,7 @@
 name = "React Router"
 roles = ["frontend", "backend"]
 webhooks_path = "/webhooks/app/uninstalled"
+port = 4000
 
 [commands]
 predev = "npx prisma generate"
